--- a/projects/dnd-system/dnd-libs/package.json
+++ b/projects/dnd-system/dnd-libs/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/core": "^7.2.0",
+    "@angular/cdk": "^7.3.1",
+    "@angular/material": "^7.3.1",
+    "@angular/animations": "^7.2.4",
+    "@angular/forms": "~7.2.0"
   }
 }
