--- a/projects/dnd-system/dnd-libs/package.json
+++ b/projects/dnd-system/dnd-libs/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@dnd-system/dnd-libs",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/cdk": "^7.3.1",
-    "@angular/material": "^7.3.1",
-    "@angular/animations": "^7.2.4",
-    "@angular/forms": "~7.2.0"
+    "@angular/common": "7.x",
+    "@angular/core": "7.x",
+    "@angular/cdk": "7.x",
+    "@angular/material": "7.x",
+    "@angular/animations": "7.x",
+    "@angular/forms": "7.x"
   }
 }
